# usb-creator-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
fixtures/macos/: test_case1.xml  test_case2.xml
src/: main.rs  usb_writer.rs
src/fixtures/linux/: test_case1.data
src/usb_writer/: bsd.rs  linux.rs  macos.rs  windows.rs
src/utils/: test.rs
