[package]
name = "usb-creator-rs"
version = "0.0.1"
edition = "2021"

[dependencies]
byte-unit = "5.1.4"
plist = "1.6.0"
serde_json = "1.0.114"

[dev-dependencies]
mockall = "0.12.1"

[dependencies.windows]
version = "^0.54.0"
features = [
    "Win32_Security",
    "Win32_Storage",
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_System",
    "Win32_System_Ioctl",
    "Win32_System_IO"
]

